front-end/src/styles/contact.css
#contact {
  background-color: var(--col-blue-drk);
  color: #fff;
  height: 100vh;
}

#contact h2.title::after {
  background-color: #fff;
}

#contact p {
  max-width: 500px;
  margin: auto;
  font-size: 0.88em;
  padding-top: 4px;
}

#contact form {
  max-width: 500px;
  display: flex;
  flex-direction: column;
  margin: auto;
}

#contact form input,
#contact form textarea {
  background: var(--col-grey-lt);
  border: none;
  outline: none;
  margin-top: 10px;
  padding: 10px;
  border-radius: 20px;
  font-weight: 500;
  font-size: 0.8em;
  line-height: 1.5em;
  position: relative;
}

#contact form textarea {
  height: 12em;
}

#contact form input.invalid,
#contact form textarea.invalid {
  padding: 5px;
  border: 5px solid var(--col-warning-red);
}

#contact #errmsg {
  color: var(--col-warning-red);
  font-size: 0.8em;
}

#contact form button {
  border: none;
  margin-top: 10px; 
  width: 100%;
  height: 3em;
  border-radius: 1.5em;
  background-color: var(--col-grn-brt);
  font-size: 1em;
  color: #fff;
  cursor: pointer;
  transition: all .25s cubic-bezier(0.10, 0.20, 0.30, 1);
}

#contact form button:hover {
  transform: scale(1.05);
}

#contact form button:active {
  transform: scale(0.95);
}

#contact .socials {
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding-top: 100px;
}

#contact .socials a {
  margin: 0 10%;
}

#contact .socials a:nth-child(1) {
  width: 64px;
}

#contact .socials a:nth-child(2) {
  width: 52px;
}

#contact .socials img {
  width: 100%;
  height: auto;
  filter: brightness(0) invert(1);
}

